# Faber

./: CODE_OF_CONDUCT.pt.md  CONTRIBUTING.md  Cargo.toml  README.md  README.pt.md  SECURITY.md  SUPPORT.md  SUPPORT.pt.md  test.rs
.github/: FUNDING.ym  PULL_REQUEST_TEMPLATE.md
.github/.github/workflows/: ci.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  MODELOS.md
docs/pt/: ARCHITECTURE.md  MODELOS.md
src/cli/: mod.rs
src/config/: mod.rs
