[package]
name = "faber"
version = "0.1.0"
edition = "2021"
authors = ["LioExp"]
description = "O agente de código que escala com o teu hardware"
license = "MIT"

[[bin]]
name = "faber"
path = "src/main.rs"

[dependencies]
clap        = { version = "=4.4.18", features = ["derive", "color"] }
serde       = { version = "=1.0.193", features = ["derive"] }
serde_json  = { version = "=1.0.108" }
toml        = { version = "=0.8.8" }
similar     = { version = "=2.3" }
colored     = { version = "=2.1" }
anyhow      = { version = "=1.0.75" }
thiserror   = { version = "=1.0.50" }
dirs = { version = "=5.0" }

[features]
default = []
cuda = []
metal = []
